Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjBoolObj.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
    end

    action Test() returns Text
        Boolean var
        var:SetValue(true)
        return var
    end
end